parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> start
Rule 1     start -> prints
Rule 2     prints -> prints NEW_PRINT ID ; statements END_PRINT ;
Rule 3     prints -> NEW_PRINT ID ; statements END_PRINT ;
Rule 4     statements -> statements statement ;
Rule 5     statements -> statement ;
Rule 6     statement -> <empty>
Rule 7     statement -> PRINT_X ( NUMBER , NUMBER , COLOR )
Rule 8     statement -> PRINT_O ( NUMBER , NUMBER , COLOR )
Rule 9     statement -> PRINT_TRI ( NUMBER , NUMBER , COLOR )
Rule 10    statement -> PRINT_STAR ( NUMBER , NUMBER , COLOR )

Terminals, with rules where they appear

(                    : 7 8 9 10
)                    : 7 8 9 10
,                    : 7 7 8 8 9 9 10 10
;                    : 2 2 3 3 4 5
COLOR                : 7 8 9 10
COMMENT              : 
END_PRINT            : 2 3
ID                   : 2 3
NEW_PRINT            : 2 3
NUMBER               : 7 7 8 8 9 9 10 10
PRINT_O              : 8
PRINT_STAR           : 10
PRINT_TRI            : 9
PRINT_X              : 7
error                : 

Nonterminals, with rules where they appear

prints               : 1 2
start                : 0
statement            : 4 5
statements           : 2 3 4

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . prints
    (2) prints -> . prints NEW_PRINT ID ; statements END_PRINT ;
    (3) prints -> . NEW_PRINT ID ; statements END_PRINT ;

    NEW_PRINT       shift and go to state 3

    start                          shift and go to state 1
    prints                         shift and go to state 2

state 1

    (0) S' -> start .



state 2

    (1) start -> prints .
    (2) prints -> prints . NEW_PRINT ID ; statements END_PRINT ;

    $end            reduce using rule 1 (start -> prints .)
    NEW_PRINT       shift and go to state 4


state 3

    (3) prints -> NEW_PRINT . ID ; statements END_PRINT ;

    ID              shift and go to state 5


state 4

    (2) prints -> prints NEW_PRINT . ID ; statements END_PRINT ;

    ID              shift and go to state 6


state 5

    (3) prints -> NEW_PRINT ID . ; statements END_PRINT ;

    ;               shift and go to state 7


state 6

    (2) prints -> prints NEW_PRINT ID . ; statements END_PRINT ;

    ;               shift and go to state 8


state 7

    (3) prints -> NEW_PRINT ID ; . statements END_PRINT ;
    (4) statements -> . statements statement ;
    (5) statements -> . statement ;
    (6) statement -> .
    (7) statement -> . PRINT_X ( NUMBER , NUMBER , COLOR )
    (8) statement -> . PRINT_O ( NUMBER , NUMBER , COLOR )
    (9) statement -> . PRINT_TRI ( NUMBER , NUMBER , COLOR )
    (10) statement -> . PRINT_STAR ( NUMBER , NUMBER , COLOR )

    ;               reduce using rule 6 (statement -> .)
    PRINT_X         shift and go to state 11
    PRINT_O         shift and go to state 12
    PRINT_TRI       shift and go to state 13
    PRINT_STAR      shift and go to state 14

    statements                     shift and go to state 9
    statement                      shift and go to state 10

state 8

    (2) prints -> prints NEW_PRINT ID ; . statements END_PRINT ;
    (4) statements -> . statements statement ;
    (5) statements -> . statement ;
    (6) statement -> .
    (7) statement -> . PRINT_X ( NUMBER , NUMBER , COLOR )
    (8) statement -> . PRINT_O ( NUMBER , NUMBER , COLOR )
    (9) statement -> . PRINT_TRI ( NUMBER , NUMBER , COLOR )
    (10) statement -> . PRINT_STAR ( NUMBER , NUMBER , COLOR )

    ;               reduce using rule 6 (statement -> .)
    PRINT_X         shift and go to state 11
    PRINT_O         shift and go to state 12
    PRINT_TRI       shift and go to state 13
    PRINT_STAR      shift and go to state 14

    statements                     shift and go to state 15
    statement                      shift and go to state 10

state 9

    (3) prints -> NEW_PRINT ID ; statements . END_PRINT ;
    (4) statements -> statements . statement ;
    (6) statement -> .
    (7) statement -> . PRINT_X ( NUMBER , NUMBER , COLOR )
    (8) statement -> . PRINT_O ( NUMBER , NUMBER , COLOR )
    (9) statement -> . PRINT_TRI ( NUMBER , NUMBER , COLOR )
    (10) statement -> . PRINT_STAR ( NUMBER , NUMBER , COLOR )

    END_PRINT       shift and go to state 16
    ;               reduce using rule 6 (statement -> .)
    PRINT_X         shift and go to state 11
    PRINT_O         shift and go to state 12
    PRINT_TRI       shift and go to state 13
    PRINT_STAR      shift and go to state 14

    statement                      shift and go to state 17

state 10

    (5) statements -> statement . ;

    ;               shift and go to state 18


state 11

    (7) statement -> PRINT_X . ( NUMBER , NUMBER , COLOR )

    (               shift and go to state 19


state 12

    (8) statement -> PRINT_O . ( NUMBER , NUMBER , COLOR )

    (               shift and go to state 20


state 13

    (9) statement -> PRINT_TRI . ( NUMBER , NUMBER , COLOR )

    (               shift and go to state 21


state 14

    (10) statement -> PRINT_STAR . ( NUMBER , NUMBER , COLOR )

    (               shift and go to state 22


state 15

    (2) prints -> prints NEW_PRINT ID ; statements . END_PRINT ;
    (4) statements -> statements . statement ;
    (6) statement -> .
    (7) statement -> . PRINT_X ( NUMBER , NUMBER , COLOR )
    (8) statement -> . PRINT_O ( NUMBER , NUMBER , COLOR )
    (9) statement -> . PRINT_TRI ( NUMBER , NUMBER , COLOR )
    (10) statement -> . PRINT_STAR ( NUMBER , NUMBER , COLOR )

    END_PRINT       shift and go to state 23
    ;               reduce using rule 6 (statement -> .)
    PRINT_X         shift and go to state 11
    PRINT_O         shift and go to state 12
    PRINT_TRI       shift and go to state 13
    PRINT_STAR      shift and go to state 14

    statement                      shift and go to state 17

state 16

    (3) prints -> NEW_PRINT ID ; statements END_PRINT . ;

    ;               shift and go to state 24


state 17

    (4) statements -> statements statement . ;

    ;               shift and go to state 25


state 18

    (5) statements -> statement ; .

    END_PRINT       reduce using rule 5 (statements -> statement ; .)
    PRINT_X         reduce using rule 5 (statements -> statement ; .)
    PRINT_O         reduce using rule 5 (statements -> statement ; .)
    PRINT_TRI       reduce using rule 5 (statements -> statement ; .)
    PRINT_STAR      reduce using rule 5 (statements -> statement ; .)
    ;               reduce using rule 5 (statements -> statement ; .)


state 19

    (7) statement -> PRINT_X ( . NUMBER , NUMBER , COLOR )

    NUMBER          shift and go to state 26


state 20

    (8) statement -> PRINT_O ( . NUMBER , NUMBER , COLOR )

    NUMBER          shift and go to state 27


state 21

    (9) statement -> PRINT_TRI ( . NUMBER , NUMBER , COLOR )

    NUMBER          shift and go to state 28


state 22

    (10) statement -> PRINT_STAR ( . NUMBER , NUMBER , COLOR )

    NUMBER          shift and go to state 29


state 23

    (2) prints -> prints NEW_PRINT ID ; statements END_PRINT . ;

    ;               shift and go to state 30


state 24

    (3) prints -> NEW_PRINT ID ; statements END_PRINT ; .

    NEW_PRINT       reduce using rule 3 (prints -> NEW_PRINT ID ; statements END_PRINT ; .)
    $end            reduce using rule 3 (prints -> NEW_PRINT ID ; statements END_PRINT ; .)


state 25

    (4) statements -> statements statement ; .

    END_PRINT       reduce using rule 4 (statements -> statements statement ; .)
    PRINT_X         reduce using rule 4 (statements -> statements statement ; .)
    PRINT_O         reduce using rule 4 (statements -> statements statement ; .)
    PRINT_TRI       reduce using rule 4 (statements -> statements statement ; .)
    PRINT_STAR      reduce using rule 4 (statements -> statements statement ; .)
    ;               reduce using rule 4 (statements -> statements statement ; .)


state 26

    (7) statement -> PRINT_X ( NUMBER . , NUMBER , COLOR )

    ,               shift and go to state 31


state 27

    (8) statement -> PRINT_O ( NUMBER . , NUMBER , COLOR )

    ,               shift and go to state 32


state 28

    (9) statement -> PRINT_TRI ( NUMBER . , NUMBER , COLOR )

    ,               shift and go to state 33


state 29

    (10) statement -> PRINT_STAR ( NUMBER . , NUMBER , COLOR )

    ,               shift and go to state 34


state 30

    (2) prints -> prints NEW_PRINT ID ; statements END_PRINT ; .

    NEW_PRINT       reduce using rule 2 (prints -> prints NEW_PRINT ID ; statements END_PRINT ; .)
    $end            reduce using rule 2 (prints -> prints NEW_PRINT ID ; statements END_PRINT ; .)


state 31

    (7) statement -> PRINT_X ( NUMBER , . NUMBER , COLOR )

    NUMBER          shift and go to state 35


state 32

    (8) statement -> PRINT_O ( NUMBER , . NUMBER , COLOR )

    NUMBER          shift and go to state 36


state 33

    (9) statement -> PRINT_TRI ( NUMBER , . NUMBER , COLOR )

    NUMBER          shift and go to state 37


state 34

    (10) statement -> PRINT_STAR ( NUMBER , . NUMBER , COLOR )

    NUMBER          shift and go to state 38


state 35

    (7) statement -> PRINT_X ( NUMBER , NUMBER . , COLOR )

    ,               shift and go to state 39


state 36

    (8) statement -> PRINT_O ( NUMBER , NUMBER . , COLOR )

    ,               shift and go to state 40


state 37

    (9) statement -> PRINT_TRI ( NUMBER , NUMBER . , COLOR )

    ,               shift and go to state 41


state 38

    (10) statement -> PRINT_STAR ( NUMBER , NUMBER . , COLOR )

    ,               shift and go to state 42


state 39

    (7) statement -> PRINT_X ( NUMBER , NUMBER , . COLOR )

    COLOR           shift and go to state 43


state 40

    (8) statement -> PRINT_O ( NUMBER , NUMBER , . COLOR )

    COLOR           shift and go to state 44


state 41

    (9) statement -> PRINT_TRI ( NUMBER , NUMBER , . COLOR )

    COLOR           shift and go to state 45


state 42

    (10) statement -> PRINT_STAR ( NUMBER , NUMBER , . COLOR )

    COLOR           shift and go to state 46


state 43

    (7) statement -> PRINT_X ( NUMBER , NUMBER , COLOR . )

    )               shift and go to state 47


state 44

    (8) statement -> PRINT_O ( NUMBER , NUMBER , COLOR . )

    )               shift and go to state 48


state 45

    (9) statement -> PRINT_TRI ( NUMBER , NUMBER , COLOR . )

    )               shift and go to state 49


state 46

    (10) statement -> PRINT_STAR ( NUMBER , NUMBER , COLOR . )

    )               shift and go to state 50


state 47

    (7) statement -> PRINT_X ( NUMBER , NUMBER , COLOR ) .

    ;               reduce using rule 7 (statement -> PRINT_X ( NUMBER , NUMBER , COLOR ) .)


state 48

    (8) statement -> PRINT_O ( NUMBER , NUMBER , COLOR ) .

    ;               reduce using rule 8 (statement -> PRINT_O ( NUMBER , NUMBER , COLOR ) .)


state 49

    (9) statement -> PRINT_TRI ( NUMBER , NUMBER , COLOR ) .

    ;               reduce using rule 9 (statement -> PRINT_TRI ( NUMBER , NUMBER , COLOR ) .)


state 50

    (10) statement -> PRINT_STAR ( NUMBER , NUMBER , COLOR ) .

    ;               reduce using rule 10 (statement -> PRINT_STAR ( NUMBER , NUMBER , COLOR ) .)

